# nes-emulator

./: .clang-format  .cmake-format.json  .dir-locals.el  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CodeCoverage.cmake  CustomWarnings.cmake  LICENSE  README.md  azure-pipelines.yml  docker-compose.yml
.github/workflows/: free_disk_space.sh  jones-build.yml
cm/: Dockerfile
cmake/: AddressSanitizer.cmake  AddressSanitizer.suppressions  AndroidNdk.cmake  BuildOptions.cmake  CodeCoverage.cmake  Coroutines.cmake  CustomFlags.cmake  CustomWarnings.cmake  Platform.cmake
cmake/Coroutines/: Coroutines.cmake
cmake/platform/: Android.cmake  Default.cmake  Linux.cmake
dev/scripts/: env.sh
dev/vscode/: launch.json  tasks.json
docs/: 6502-NMOS.extra.opcodes  6502_cpu.txt
resources/palettes/: primary.scss
scripts/: env.sh
source/apu/: CMakeLists.txt  apu.cc  apu_test.cc  test.cmake
source/apu/include/: apu.hh
source/cartridge/: CMakeLists.txt  cartridge.cc  cartridge_header.cc  cartridge_header.hh  cartridge_test.cc  test.cmake
source/controller/: CMakeLists.txt  controller.cc  controller_test.cc  input_handler.hh
source/cpp/: CMakeLists.txt  NesRom.cpp  cpu.cc  jones  main.cc  main.cpp  nes_rom.cc  screen.cc
source/cpu/: CMakeLists.txt  addressing_mode.hh  cpu.cc  cpu_test.cc  decode.cc  decode.hh  disassemble.cc  instruction.cc  instruction.hh  instruction_set.h  instruction_set.hh  interrupts.hh  opcode.hh  opcode_table.h  opcode_table.hh  operand.hh  register.hh  registers.cc  registers.h  registers.hh  status_register.cc  status_register.hh  status_register_flag.hh  status_register_flags.h  test.cmake
source/cpu/include/: cpu.h  cpu.hh  disassemble.hh
source/debugger/: CMakeLists.txt  debugger.cc  debugger.hh  input.cc  interface.cc  interface.hh  layout_manager.cc  layout_manager.hh  log.cc  log.hh  main_screen.cc  main_screen.hh  screen.cc  screen.hh
source/debugger/include/: debugger.hh  input.hh
source/debugger/windows/: base_window.cc  command_window.cc  command_window.hh  content_window.cc  content_window.hh  window.cc  window.hh
source/debugger/windows/command/: command.cc  command.hh  command_buffer.cc  command_buffer.hh  command_prompt.cc  command_prompt.hh  command_window.cc  command_window.hh
source/debugger/windows/content/: content_window.cc  content_window.hh
source/debugger/windows/include/: base_window.hh  window.hh
source/frontends/: CMakeLists.txt
source/frontends/sdl/: CMakeLists.txt  main.cc  sdl_component.hh  sdl_controller.cc  sdl_controller.hh  sdl_event_listener.hh  sdl_manager.cc  sdl_manager.hh  sdl_screen.cc  sdl_screen.hh
source/jones/: CMakeLists.txt
source/jones/apu/: CMakeLists.txt  apu.cc  test.cmake
source/jones/apu/include/: apu.hh
source/jones/cartridge/: CMakeLists.txt  cartridge.cc  cartridge_header.cc  cartridge_header.hh  test.cmake
source/jones/cartridge/include/: cartridge.hh
source/jones/cartridge/mapper/: mapped_cartridge.hh  mapper.cc  mapper.hh  mapper_cnrom.cc  mapper_cnrom.hh  mapper_mmc1.cc  mapper_mmc1.hh  mapper_nrom.cc  mapper_nrom.hh  mapper_unsupported.cc  mapper_unsupported.hh  mapper_view.hh
source/jones/configuration/: CMakeLists.txt  configuration.cc  configuration_test.cc  test.cmake
source/jones/configuration/include/: configuration.hh  configuration.tt
source/jones/controller/: CMakeLists.txt  controller.cc  test.cmake
source/jones/controller/include/: controller.hh  mapped_controller.hh
source/jones/cpu/: CMakeLists.txt  addressing_mode.hh  cpu.cc  cpu_test.cc  decode.cc  disassemble.cc  disassemble_internal.hh  instruction.cc  instruction.hh  interrupts.hh  opcode.hh  operand.hh  registers.hh  status_register.hh  test.cmake
source/jones/cpu/include/: cpu.hh  disassemble.hh  interrupt.hh
source/jones/debugger/: CMakeLists.txt  debugger_test.cc  test.cmake
source/jones/log/: CMakeLists.txt  log.cc
source/jones/log/include/: log.hh
source/jones/memory/: CMakeLists.txt  memory.cc  test.cmake
source/jones/memory/include/: memory.hh
source/jones/nes/: CMakeLists.txt  main.cc  nes.cc  nes_components.hh  nes_controller.hh  nes_screen.hh  screen_proxy.hh
source/jones/nes/include/: debugger.hh  nes.hh  utils.hh
source/jones/ppu/: CMakeLists.txt  control_register.cc  control_register.hh  mask_register.cc  mask_register.hh  name_table.cc  name_table.hh  palette.cc  palette.hh  pattern_table.cc  pattern_table.hh  ppu.cc  ppu_frame.cc  ppu_frame.hh  ppu_frame_state.hh  ppu_io_context.hh  ppu_render_context.hh  ppu_test.cc  status_register.cc  status_register.hh  test.cmake
source/jones/ppu/include/: ppu.hh
source/jones/screen/: CMakeLists.txt  screen_test.cc  test.cmake
source/jones/screen/include/: screen.hh
source/jones/util/: CMakeLists.txt
source/jones/util/include/: bit_utils.hh
source/log/: log.cc
source/memory/: CMakeLists.txt  memory_test.cc
source/memory/include/: memory.hh
source/nes/: CMakeLists.txt  main.cc  nes.cc  nes_controller.hh  nes_rom.cc  screen.cc  screen.hh  sdl_module.cmake
source/nes/include/: nes.hh  nes_rom.hh  screen.hh
source/screen/: CMakeLists.txt
source/screen/include/: screen.hh
source/tool/: CMakeLists.txt  boost_gil.h  image_writer.cc  png_writer.cc  png_writer.h  tool.cc  tool_decoder.cc  tool_decoder.hh  tool_dump.cc
test/cpu/cpu_interrupts_v2/: CMakeLists.txt  cpu_interrupts.cc  cpu_interrupts_v2.cc
test/cpu/nes_test/: CMakeLists.txt  nes_test.cc
test/traces/: CMakeLists.txt  traces.cc
test/traces/blargg_palette_ram/: trace.json
test/traces/blargg_power_up_palette/: trace.json
test/traces/blargg_sprite_ram/: trace.json
test/traces/blargg_vbl_clear_time/: trace.json
test/traces/blargg_vram_access/: trace.json
test/traces/cpu_branch_timing_backward_branch/: trace.json
test/traces/cpu_branch_timing_branch_basics/: trace.json
test/traces/cpu_branch_timing_forward_branch/: trace.json
test/traces/cpu_dummy_writes_oam/: trace.json
test/traces/nes_test/: trace.json
test/traces/test_cpu_exec_space_apu/: trace.json
test/traces/test_cpu_exec_space_ppuio/: trace.json
(+78 files in other folders)
