cmake_minimum_required(VERSION 3.14)

add_subdirectory(memory)
add_subdirectory(nes)
add_subdirectory(apu)
add_subdirectory(cartridge)
add_subdirectory(configuration)
add_subdirectory(controller)
add_subdirectory(cpu)
add_subdirectory(log)
add_subdirectory(ppu)
add_subdirectory(screen)
add_subdirectory(util)
